# kernelforge

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PLAN_FCHL19V2.md  README.md  profile_hessian.py  profile_jacobian.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  release.yaml  release.yml
benchmark/: qmlbench.py
benchmarks/: bench_fchl19_precision.py  bench_global_jacobian_t_matvec.py  bench_krr_matvec.py  bench_local_hessian_matvec.py  bench_local_hessian_matvec_user_case.py  bench_local_jacobian_t_matvec.py
docs/: PLAN_FCHL19V2.md  high-level-model-api.md
environments/: environment-dev-macos.yaml  environment-dev.yaml
examples/: desc_hess-gauss.ipynb  desc_hess.ipynb  energy_force_kernel_ethanol.py  energy_force_rff_ethanol.py  energy_regression_kernel.py  energy_regression_kernel_qm7b.py  energy_regression_rff.py  energy_regression_rff_qm7b.py  ethanol.sdf  fchl18_krr_energy_and_force.py  fchl18_krr_energy_only.py  fchl18_krr_force_only.py  fchl18_qmllib_krr_energy_and_force.py  fchl18_qmllib_krr_energy_only.py  fchl18_qmllib_krr_force_only.py  fchl18_qmllib_parity_check.py  fchl_example.ipynb  fchl_hess.ipynb  forcepack.py  gaussian_hessian_kernel.f90  kernel_symm_rfp_large.py  krr_energy_and_force.py  krr_energy_only.py  krr_force_only.py  krr_regression_ethanol.py  local_krr_energy_and_force.py  local_krr_energy_only.py  local_krr_force_only.py  local_rff_energy_and_force.py  local_rff_energy_only.py  local_rff_force_only.py  model_api_qm7b_energy_only.py  model_api_rmd17_ethanol_fchl18_energy_and_force.py  model_api_rmd17_ethanol_fchl19_energy_and_force.py  model_api_small_mols_energy_and_force.py  model_api_small_mols_fchl18_energy_and_force.py  model_api_small_mols_rff_energy_and_force.py  model_example.py  optimize_fchl18_krr.py  optimize_krr_fchl19.py  (+19 more)
examples/gpu_ref/: Makefile  OPTIMIZATION_NOTES.md  TRAINING_NOTES.md  krr_gpu.cu
python/kernelforge/: __init__.py  _cholesky.pyi  _fchl19.pyi  _invdist.pyi  _kernels.pyi  ase_calculator.py  cli.py  cuda_fchl19_repr.pyi  cuda_global_kernels.pyi  cuda_invdist_repr.pyi  cuda_krr_ext.pyi  cuda_local_kernels.pyi  cuda_rff_features.pyi  cuda_solvers.pyi  fchl18_kernel.pyi  fchl18_repr.pyi  fchl19_repr.pyi  fchl19v2_repr.pyi  global_kernels.pyi  invdist_repr.pyi  kernelcli.py  kernelmath.pyi  kernelmd.py  kitchen_sinks.pyi  local_kernels.pyi  md.py  model.py  rmd17_data.py
python/kernelforge/models/: __init__.py  base.py  cuda_global_krr.py  cuda_global_rff.py  cuda_local_krr.py  cuda_local_rff.py  fchl18_krr.py  global_krr.py  global_rff.py  krr.py  representations.py  rff.py
scripts/: benchmark_best.py  benchmark_sweep.py  diag_kernel_compare.py  optuna_sweep.py  optuna_sweep_a8.py  profile_local_krr.py
src/: aligned_alloc64.hpp  bindings.cpp  bindings_cholesky.cpp  bindings_fchl19.cpp  bindings_kernels.cpp  blas_config.h  blas_int.h  cholesky.cpp  cholesky.hpp  constants.hpp  cuda_fchl19_repr.cu  cuda_fchl19_repr.hpp  cuda_fchl19_repr_bindings.cpp  cuda_global_kernels.cu  cuda_global_kernels.hpp  cuda_global_kernels_bindings.cpp  cuda_invdist_repr.cu  cuda_invdist_repr.hpp  cuda_invdist_repr_bindings.cpp  cuda_krr.cu  cuda_krr.h  cuda_krr_bindings.cpp  cuda_local_kernels.cu  cuda_local_kernels.hpp  cuda_local_kernels_bindings.cpp  cuda_rff_features.cu  cuda_rff_features.hpp  cuda_rff_features_bindings.cpp  cuda_solvers.cu  cuda_solvers.hpp  cuda_solvers_bindings.cpp  curfp.h  curfp_handle.cpp  curfp_internal.h  curfp_spftrf.cpp  curfp_spftrs.cpp  curfp_ssfr2.cpp  curfp_ssfrk.cpp  fchl18_full_kernels.cpp  fchl18_full_kernels.hpp  (+48 more)
tests/: __init__.py  test_ase_calculator.py  test_basic.py  test_cholesky.py  test_cuda_fchl19_grad.py  test_cuda_fchl19_repr.py  test_cuda_global_krr.py  test_cuda_global_rff.py  test_cuda_invdist_repr.py  test_cuda_local_krr.py  test_cuda_local_rff.py  test_cuda_rff_features.py  test_cuda_solvers.py  test_fchl18.py  test_fchl18_full_kernels.py  test_fchl18_gradient.py  test_fchl18_hessian.py  test_fchl18_hessian_kernels.py  test_fchl18_integration.py  test_fchl18_jacobian_kernels.py  test_fchl18_scalar_kernels.py  test_fchl19.py  test_fchl19_full_kernel.py  test_fchl19_gradient.py  test_fchl19_hessian.py  test_fchl19v2.py  test_fchl19v2_a8.py  test_full_kernel.py  test_hessian.py  test_hessian_matvec.py  test_hessian_rfp.py  test_invdist.py  test_jacobian.py  test_jacobian_t_matvec.py  test_kernelcli.py  test_kernels.py  test_kitchen_sinks.py  test_local_hessian_matvec.py  test_local_jacobian_t_matvec.py  test_local_scalar_kernels.py  (+6 more)
