[build-system]
requires = ["scikit-build-core>=0.9", "setuptools-scm>=8.0", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kernelforge"
dynamic = ["version"]
description = "Optimized Kernels for ML"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anders Christensen"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.00",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-xdist", "pytest-cov", "pytest-timeout"]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
qmlbench = "kernelforge.cli:main"

[project.urls]
Homepage = "https://github.com/andersx/kernelforge"
Issues = "https://github.com/andersx/kernelforge/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
build.verbose = true
wheel.packages = ["python/kernelforge"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
CMAKE_VERBOSE_MAKEFILE = "ON"
CMAKE_BUILD_TYPE = "Release"

[tool.uv.extra-build-dependencies]
kernelforge = ["scikit_build_core", "setuptools-scm>=8.0"]

[tool.setuptools_scm]
# Use git tags with 'v' prefix (e.g., v0.1.14)
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
tag_regex = "^v?(?P<version>[0-9.]+)$"
fallback_version = "0.0.0.dev0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["kernelforge"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N803", "N806", "B017", "B023", "C408"]  # Allow test-specific patterns
"python/kernelforge/cli.py" = ["N806", "F841", "B905"]  # Allow zip without strict in benchmarks
"python/kernelforge/*.pyi" = ["N802", "N803", "N806"]
# 
[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "-v --tb=short -rA --verbose --cov=kernelforge --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["python/kernelforge"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
