[build-system]
requires = ["scikit-build-core>=0.9", "setuptools-scm>=8.0", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kernelforge"
dynamic = ["version"]
description = "Optimized Kernels for ML"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anders Christensen"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=2.00",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-xdist", "pytest-timeout"]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
qmlbench = "kernelforge.cli:main"

[project.urls]
Homepage = "https://github.com/andersx/kernelforge"
Issues = "https://github.com/andersx/kernelforge/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
build.verbose = true
wheel.packages = ["python/kernelforge"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
CMAKE_VERBOSE_MAKEFILE = "ON"
CMAKE_BUILD_TYPE = "Release"

[tool.uv.extra-build-dependencies]
kernelforge = ["scikit_build_core", "setuptools-scm>=8.0"]

[tool.setuptools_scm]
# Use git tags with 'v' prefix (e.g., v0.1.14)
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
tag_regex = "^v?(?P<version>[0-9.]+)$"
fallback_version = "0.0.0.dev0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["python/"]

[tool.ruff.lint]
select = [
    # Original rules
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    
    # New additions for better code quality
    "S",      # flake8-bandit (security issues)
    "PTH",    # use pathlib instead of os.path
    "RUF",    # Ruff-specific rules
    "PT",     # pytest style
    "ERA",    # eradicate (commented code)
    "BLE",    # blind exception catching
    "ANN",    # type annotations
]

ignore = [
    # Security exceptions
    "S310",   # urllib.request.urlopen - needed for downloads
    
    # Type annotation exceptions
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["kernelforge"]

[tool.ruff.lint.per-file-ignores]
# Tests can be less strict
"tests/*" = [
    "N803",   # Argument name conventions (X, Y, K are scientific)
    "N806",   # Variable name conventions
    "S101",   # Use of assert (fine in tests)
    "B017",   # pytest.raises(Exception) with too broad exception
    "B023",   # Function uses loop variable
    "C408",   # Unnecessary dict call
    "PT011",  # pytest.raises without match parameter
    "PT018",  # Composite assertions are fine in tests
    "PT028",  # Fixtures with default args are acceptable
    "ANN",    # Type annotations not required in tests
    "ERA001", # Allow explanatory comments (not all are commented code)
]

# CLI can print and use scientific naming
"python/kernelforge/cli.py" = [
    "N806",   # Non-lowercase variable (scientific notation)
    "T201",   # Print statements (CLI tool)
    "ANN",    # Type annotations not required in CLI
    "PTH123", # open() is fine for simple file operations
    "RUF015", # List indexing is clearer than next(iter(...))
    "B905",   # zip without strict is acceptable in benchmarks
]

# Type stubs have different conventions
"python/kernelforge/*.pyi" = [
    "N802",   # Function name should be lowercase
    "N803",   # Argument name conventions
    "N806",   # Variable name conventions
    "ANN",    # Type annotations are the stub itself
]
# 
[tool.mypy]
python_version = "3.10"
strict = true
