[build-system]
requires = ["scikit-build-core>=0.9", "setuptools-scm>=8.0", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kernelforge"
dynamic = ["version"]
description = "Optimized Kernels for ML"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anders Christensen"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=2.00",
    "typing-extensions>=4.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-xdist", "pytest-timeout"]
dev = [
    "ruff>=0.8.0",
    "ty",
    "pre-commit>=3.6.0",
]

[project.scripts]
qmlbench = "kernelforge.cli:main"

[project.urls]
Homepage = "https://github.com/andersx/kernelforge"
Issues = "https://github.com/andersx/kernelforge/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
build.verbose = true
wheel.packages = ["python/kernelforge"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
CMAKE_VERBOSE_MAKEFILE = "ON"
CMAKE_BUILD_TYPE = "Release"

[tool.uv.extra-build-dependencies]
kernelforge = ["scikit_build_core", "setuptools-scm>=8.0"]

[tool.setuptools_scm]
# Use git tags with 'v' prefix (e.g., v0.1.14)
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
tag_regex = "^v?(?P<version>[0-9.]+)$"
fallback_version = "0.0.0.dev0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["python/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security issues)
    "PTH",    # use pathlib instead of os.path
    "RUF",    # Ruff-specific rules
    "PT",     # pytest style
    "ERA",    # eradicate (commented code)
    "BLE",    # blind exception catching
    "ANN",    # type annotations
]
ignore = [
    "S310",   # urllib.request.urlopen - needed for downloads
    "N802",   # Function name should be lowercase (scientific functions use uppercase)
    "N803",   # Argument name should be lowercase (X, Y, K are scientific standards)
    "N806",   # Variable name should be lowercase (scientific notation)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert (fine in tests)
]

"python/kernelforge/cli.py" = [
    "T201",   # Print statements (CLI tool)
]


